# starweaver

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.starweaver-claw  LICENSE  Makefile  README.md  book.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/starweaver-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/starweaver-agent/: Cargo.toml
crates/starweaver-agent-platform/: Cargo.toml
crates/starweaver-agent-platform/src/: lib.rs
crates/starweaver-agent/src/: bundles.rs  filters.rs  lib.rs  materialization.rs  mcp_live.rs  mcp_rmcp.rs  media_compression.rs  presets.rs  runtime.rs  session.rs  streaming.rs  subagent.rs  subagent_config.rs
crates/starweaver-agent/tests/: agent_spec_profiles.rs  agent_spec_v2.rs  app_facade.rs  builder.rs  bundles.rs  cost.rs  coverage_acceptance.rs  delegation_failure.rs  delegation_tool.rs  direct.rs  durability_atomic.rs  history.rs  iteration.rs  live_mcp.rs  mcp.rs  output_policy.rs  presets.rs  process_shell.rs  public_api.rs  publication_outbox.rs  sdk_filter_order.rs  session.rs  session_options.rs  skills.rs  spec_selection.rs  stream.rs  subagent_config.rs  subagent_inheritance.rs  subagent_lifecycle.rs  subagents.rs  trace.rs
crates/starweaver-claw/: Cargo.toml  build.rs
crates/starweaver-claw/src/: config.rs  controller.rs  error.rs  execution.rs  lib.rs  main.rs  orchestration.rs  profile.rs  runtime_state.rs  service.rs  storage.rs  web_assets.rs  workspace.rs
crates/starweaver-claw/web/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/starweaver-cli/: Cargo.toml
crates/starweaver-cli/src/: args.rs  atomic_file.rs  client_state.rs  clipboard.rs  command_catalog.rs  config.rs  display_preview.rs  environment.rs  error.rs  launcher.rs  lib.rs  local_store.rs  main.rs  oauth.rs  profiles.rs  prompt_input.rs  rpc.rs  runner.rs  runtime_coordinator.rs  service.rs  session_management.rs  slash_commands.rs  tui.rs  update_check.rs
crates/starweaver-cli/tests/: cli.rs  cli_catalogs.rs  cli_foundations.rs  cli_product_ready.rs  golden_stream.rs  launcher.rs  session_store_contract.rs
crates/starweaver-context/: Cargo.toml
crates/starweaver-context/src/: agent_context.rs  agent_tool_state.rs  checkpoint.rs  config.rs  context_handle.rs  context_protocol.rs  dependency.rs  event.rs  host_capabilities.rs  lib.rs  message_bus.rs  notes.rs  parity.rs  resumable_state.rs  run_state.rs  runtime_context.rs  runtime_state.rs  state.rs  task.rs  tool_runtime.rs
crates/starweaver-context/tests/: checkpoint_contracts.rs  config.rs  context.rs  context_state.rs  notes.rs  parity.rs
crates/starweaver-core/: Cargo.toml
crates/starweaver-core/src/: attachments.rs  cancellation.rs  events.rs  ids.rs  lib.rs  lifecycle.rs  protocol.rs  subagent.rs  trace.rs  usage.rs  xml.rs
crates/starweaver-core/tests/: protocol_contracts.rs
crates/starweaver-envd/: Cargo.toml
crates/starweaver-envd-client/: Cargo.toml
crates/starweaver-envd-client/src/: lib.rs
crates/starweaver-envd-core/: Cargo.toml
crates/starweaver-envd-core/src/: error.rs  lib.rs  request.rs  rpc.rs  service.rs  types.rs
crates/starweaver-envd-core/tests/: protocol_contracts.rs
crates/starweaver-envd/src/: convert.rs  lib.rs  main.rs  rpc.rs  tests.rs  transport.rs
crates/starweaver-envd/tests/: http.rs  path_candidates.rs  stdio.rs
crates/starweaver-environment/: Cargo.toml
crates/starweaver-environment/src/: blocking.rs  composite_provider.rs  context_xml.rs  error.rs  factory.rs  file_tree.rs  lib.rs  local_io.rs  local_provider.rs  path.rs  policy.rs  provider.rs  search.rs  shell.rs  switchable_provider.rs  tests.rs  types.rs  virtual_provider.rs
crates/starweaver-model/: Cargo.toml
crates/starweaver-model/src/: adapter.rs  lib.rs  media.rs  message.rs  oauth.rs  presets.rs  profile.rs  registry.rs  request.rs  settings.rs  stream.rs  test.rs  transport.rs  wrappers.rs
crates/starweaver-model/tests/: cachepoint_mapping.rs  client.rs  coverage_core.rs  fixture_schema.rs  http_config.rs  media_preflight.rs  message_ast.rs  model_wrappers.rs  multimodal_mapping.rs  native_mcp.rs  native_tool_coverage.rs  oauth_provider.rs  protocol_agent_loop_mapping.rs  protocol_client_agent_loop.rs  replay.rs  replay_tooling.rs  request_guard.rs  request_parameters.rs  request_preparation.rs  stream_replay.rs  test_models.rs
crates/starweaver-oauth/: Cargo.toml
crates/starweaver-oauth-provider/: Cargo.toml
crates/starweaver-oauth-provider/src/: lib.rs
crates/starweaver-oauth-provider/tests/: refresh.rs
crates/starweaver-oauth/src/: codex.rs  error.rs  jwt.rs  lib.rs  store.rs  token_source.rs  types.rs
crates/starweaver-oauth/tests/: oauth.rs
crates/starweaver-rpc/: Cargo.toml
crates/starweaver-rpc-core/: Cargo.toml
crates/starweaver-rpc-core/schemas/: rpc-wire-v1.schema.json
crates/starweaver-rpc-core/src/: dto.rs  environment.rs  lib.rs
crates/starweaver-rpc-core/tests/: desktop_conformance.rs  generated_protocol.rs  protocol_contracts.rs  rpc_wire_conformance.rs  session_search.rs
crates/starweaver-rpc/src/: agent_catalog.rs  atomic_file.rs  auth.rs  config.rs  coordinator.rs  environment.rs  environment_contract.rs  environment_manager.rs  error.rs  host_cursor.rs  lib.rs  main.rs  service.rs  session_management.rs  session_tools.rs  state.rs  transport.rs
crates/starweaver-rpc/tests/: golden_stream.rs  http.rs  stdio.rs
crates/starweaver-runtime/: Cargo.toml
crates/starweaver-runtime/src/: agent.rs  capability.rs  dependency_assembly.rs  direct.rs  (+13 more)
crates/starweaver-session/: Cargo.toml
crates/starweaver-storage/: Cargo.toml
crates/starweaver-stream/: Cargo.toml
crates/starweaver-tools/: Cargo.toml
crates/starweaver-usage/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: api.rs  architecture.rs  capabilities.rs  common.rs  coverage.rs  desktop.rs  desktop_rpc_e2e.rs  docs.rs  fixtures.rs  main.rs  release.rs  rpc_contracts.rs  rpc_integration.rs  rpc_interop_e2e.rs  smoke.rs
(+936 files in other folders)
