[workspace]
members = [
    "crates/starweaver-cli",
    "crates/starweaver-agent",
    "crates/starweaver-context",
    "crates/starweaver-core",
    "crates/starweaver-model",
    "crates/starweaver-runtime",
    "crates/starweaver-tools",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["wh1isper"]
license = "BSD-3-Clause"
repository = "https://github.com/Wh1isper/starweaver"
homepage = "https://github.com/Wh1isper/starweaver"
description = "Rust agent SDK workspace for Starweaver"
readme = "README.md"
keywords = ["agent", "sdk", "ai", "runtime"]
categories = ["development-tools"]

[workspace.dependencies]
starweaver-agent = { path = "crates/starweaver-agent", version = "0.1.0" }
starweaver-context = { path = "crates/starweaver-context", version = "0.1.0" }
starweaver-core = { path = "crates/starweaver-core", version = "0.1.0" }
starweaver-model = { path = "crates/starweaver-model", version = "0.1.0" }
starweaver-runtime = { path = "crates/starweaver-runtime", version = "0.1.0" }
starweaver-tools = { path = "crates/starweaver-tools", version = "0.1.0" }
async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
