[workspace]
members = [
    "crates/starweaver-cli",
    "crates/starweaver-rpc",
    "crates/starweaver-rpc-core",
    "crates/starweaver-agent",
    "crates/starweaver-context",
    "crates/starweaver-core",
    "crates/starweaver-model",
    "crates/starweaver-oauth",
    "crates/starweaver-oauth-provider",
    "crates/starweaver-runtime",
    "crates/starweaver-tools",
    "crates/starweaver-environment",
    "crates/starweaver-envd-core",
    "crates/starweaver-envd",
    "crates/starweaver-envd-client",
    "crates/starweaver-session",
    "crates/starweaver-stream",
    "crates/starweaver-storage",
    "crates/starweaver-usage",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.96"
authors = ["wh1isper"]
license = "BSD-3-Clause"
repository = "https://github.com/Wh1isper/starweaver"
homepage = "https://github.com/Wh1isper/starweaver"
description = "Rust agent SDK workspace for Starweaver"
readme = "README.md"
keywords = ["agent", "sdk", "ai", "runtime"]
categories = ["development-tools"]

[workspace.dependencies]
starweaver-agent = { path = "crates/starweaver-agent", version = "0.1.1" }
starweaver-context = { path = "crates/starweaver-context", version = "0.1.1" }
starweaver-core = { path = "crates/starweaver-core", version = "0.1.1" }
starweaver-model = { path = "crates/starweaver-model", version = "0.1.1" }
starweaver-oauth = { path = "crates/starweaver-oauth", version = "0.1.1" }
starweaver-oauth-provider = { path = "crates/starweaver-oauth-provider", version = "0.1.1" }
starweaver-runtime = { path = "crates/starweaver-runtime", version = "0.1.1" }
starweaver-tools = { path = "crates/starweaver-tools", version = "0.1.1" }
starweaver-usage = { path = "crates/starweaver-usage", version = "0.1.1" }
starweaver-environment = { path = "crates/starweaver-environment", version = "0.1.1" }
starweaver-envd-core = { path = "crates/starweaver-envd-core", version = "0.1.1" }
starweaver-envd = { path = "crates/starweaver-envd", version = "0.1.1" }
starweaver-envd-client = { path = "crates/starweaver-envd-client", version = "0.1.1" }
starweaver-session = { path = "crates/starweaver-session", version = "0.1.1" }
starweaver-stream = { path = "crates/starweaver-stream", version = "0.1.1" }
starweaver-storage = { path = "crates/starweaver-storage", version = "0.1.1" }
starweaver-cli = { path = "crates/starweaver-cli", version = "0.1.1" }
starweaver-rpc-core = { path = "crates/starweaver-rpc-core", version = "0.1.1" }
async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
semver = "1.0.27"
schemars = { version = "1.2.1", features = ["derive"] }
globset = "0.4.16"
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.24"
jsonschema = { version = "0.33.0", default-features = false }
yaml_serde = "=0.10.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
clap = { version = "4.5.51", features = ["derive"] }
clap_complete = "4.5.61"
crossterm = "0.28.1"
pulldown-cmark = "0.10"
ring = "0.17.14"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono", "serde_json"] }
toml = "0.8.23"
tempfile = "3.23.0"
unicode-width = "0.2.0"
base64 = "0.22.1"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
fs2 = "0.4.3"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "ico"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
