[project]
name = "starweaver-workspace"
version = "0.0.0"
description = "Python workspace for Starweaver packages"
requires-python = ">=3.11,<3.14"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/starweaver-py"]

[dependency-groups]
dev = [
    "maturin>=1.8,<2",
    "pre-commit>=2.20.0",
    "pytest>=8.0.0",
    "pyright>=1.1.0",
    "ruff>=0.9.2",
]

[tool.pyright]
include = [
    "examples/python",
    "packages/starweaver-py/python/starweaver",
    "packages/starweaver-py/tests",
    "scripts/python_wheel_smoke.py",
]
exclude = [
    "**/__pycache__",
    "**/.*",
    "target",
]
pythonVersion = "3.13"
extraPaths = ["packages/starweaver-py/python"]
typeCheckingMode = "standard"
reportMissingModuleSource = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E",
    "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
ignore = [
    "E501",
    "TRY003",
    "TRY300",
    "TRY301",
]

[tool.ruff.lint.per-file-ignores]
"packages/starweaver-py/tests/*" = ["S101"]
