[package]
name = "xtask"
version = "0.0.1-dev.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
jsonschema.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
syn = { version = "2.0", features = ["full"] }
tempfile.workspace = true
toml.workspace = true
yaml_serde.workspace = true

[lints]
workspace = true
