[package]
name = "starweaver-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Ergonomic agent SDK facade for Starweaver"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
reqwest.workspace = true
uuid.workspace = true
starweaver-context.workspace = true
starweaver-core.workspace = true
starweaver-environment.workspace = true
starweaver-model.workspace = true
starweaver-runtime.workspace = true
starweaver-tools.workspace = true
tokio.workspace = true

[dev-dependencies]
starweaver-core.workspace = true
starweaver-tools.workspace = true

[lints]
workspace = true
