[package]
name = "starweaver-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Ergonomic agent SDK facade for Starweaver"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "starweaver_agent_rmcp_stdio_fixture"
path = "tests/fixtures/rmcp_stdio_server.rs"
test = false
bench = false
doc = false

[dependencies]
base64.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
sha2.workspace = true
yaml_serde.workspace = true
thiserror.workspace = true
reqwest.workspace = true
rmcp = { version = "1.7.0", default-features = false, features = ["client", "server", "transport-child-process", "transport-io", "transport-streamable-http-client-reqwest"] }
uuid.workspace = true
starweaver-context.workspace = true
starweaver-core.workspace = true
starweaver-environment.workspace = true
starweaver-model.workspace = true
starweaver-oauth-provider.workspace = true
starweaver-runtime.workspace = true
starweaver-session.workspace = true
starweaver-stream.workspace = true
starweaver-usage = { workspace = true, features = ["pricing"] }
starweaver-tools.workspace = true
tokio.workspace = true

[dev-dependencies]
axum = "0.8.7"
rusqlite.workspace = true
rmcp = { version = "1.7.0", default-features = false, features = ["client", "server", "transport-child-process", "transport-io", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
starweaver-core.workspace = true
starweaver-tools.workspace = true
tempfile.workspace = true
tokio-util = "0.7.17"

[lints]
workspace = true
