[package]
name = "starweaver-claw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Durable session runtime foundations for Starweaver"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "starweaver-claw"
path = "src/main.rs"

[dependencies]
starweaver-session.workspace = true
starweaver-stream.workspace = true

[dev-dependencies]
starweaver-core.workspace = true
starweaver-model.workspace = true
starweaver-runtime.workspace = true
tokio.workspace = true

[lints]
workspace = true
