[package]
name = "starweaver-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for Starweaver"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "starweaver-cli"
path = "src/main.rs"

[[bin]]
name = "starweaver"
path = "src/bin/starweaver.rs"

[[bin]]
name = "sw"
path = "src/bin/sw.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
starweaver-agent.workspace = true
starweaver-core.workspace = true
starweaver-model.workspace = true
starweaver-runtime.workspace = true
starweaver-session.workspace = true
starweaver-stream.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
