[package]
name = "starweaver-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for Starweaver"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "starweaver-cli"
path = "src/main.rs"

[[bin]]
name = "starweaver"
path = "src/bin/starweaver.rs"

[[bin]]
name = "sw"
path = "src/bin/sw.rs"

[dependencies]
async-trait.workspace = true
clap.workspace = true
clap_complete.workspace = true
chrono.workspace = true
crossterm.workspace = true
pulldown-cmark.workspace = true
ring.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true
starweaver-agent.workspace = true
starweaver-context.workspace = true
starweaver-core.workspace = true
starweaver-usage.workspace = true
starweaver-environment.workspace = true
starweaver-envd.workspace = true
starweaver-envd-client.workspace = true
starweaver-envd-core.workspace = true
starweaver-model.workspace = true
starweaver-oauth.workspace = true
starweaver-oauth-provider.workspace = true
starweaver-runtime.workspace = true
starweaver-session.workspace = true
starweaver-stream.workspace = true
starweaver-rpc-core.workspace = true
starweaver-tools.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
reqwest.workspace = true
semver.workspace = true
unicode-width.workspace = true

[dev-dependencies]
starweaver-context.workspace = true
tempfile.workspace = true

[lints]
workspace = true
