[package]
name = "starweaver-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Agent context, state, message bus, and event bus primitives for Starweaver"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
starweaver-core.workspace = true
starweaver-usage.workspace = true
starweaver-model.workspace = true
uuid.workspace = true

[lints]
workspace = true
