[package]
name = "starweaver-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core abstractions for the Starweaver agent SDK"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true
