[package]
name = "starweaver-envd-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "EnvD JSON-RPC client for Starweaver"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
starweaver-envd-core.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "process"] }

[lints]
workspace = true
