[package]
name = "starweaver-envd-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Runtime-neutral envd service protocol contracts"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
starweaver-core.workspace = true
thiserror.workspace = true

[lints]
workspace = true
