[package]
name = "starweaver-envd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local envd service implementation for Starweaver"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "starweaver-envd"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
starweaver-core.workspace = true
starweaver-envd-core.workspace = true
starweaver-environment.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util"] }

[dev-dependencies]
starweaver-envd-client.workspace = true
tempfile.workspace = true

[lints]
workspace = true
