[package]
name = "starweaver-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Provider-neutral model protocol and wire adapters for Starweaver"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
base64.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
starweaver-core.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
