[package]
name = "starweaver-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standalone Starweaver JSON-RPC host process"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
publish = false

[[bin]]
name = "starweaver-rpc"
path = "src/main.rs"

[dependencies]
clap.workspace = true
starweaver-cli.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
