[package]
name = "starweaver-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standalone Starweaver JSON-RPC host process"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
publish = false

[[bin]]
name = "starweaver-rpc"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
starweaver-agent.workspace = true
starweaver-context.workspace = true
starweaver-core.workspace = true
starweaver-environment.workspace = true
starweaver-envd-client.workspace = true
starweaver-envd-core.workspace = true
starweaver-model.workspace = true
starweaver-rpc-core.workspace = true
starweaver-runtime.workspace = true
starweaver-session.workspace = true
starweaver-storage.workspace = true
starweaver-stream.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
