[package]
name = "starweaver-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Agent-loop graph and runtime executor primitives for Starweaver"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
jsonschema.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
starweaver-context.workspace = true
starweaver-core.workspace = true
starweaver-model.workspace = true
starweaver-stream.workspace = true
starweaver-tools.workspace = true
starweaver-usage = { workspace = true, features = ["pricing"] }
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
