[package]
name = "starweaver-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Durable session contracts for Starweaver"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
starweaver-context.workspace = true
starweaver-core.workspace = true
starweaver-environment.workspace = true
starweaver-runtime.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
