[package]
name = "starweaver-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Display and replay stream contracts for Starweaver"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
starweaver-core.workspace = true
starweaver-model.workspace = true
starweaver-runtime.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }

[lints]
workspace = true
