[package]
name = "starweaver-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Function tools, tool registries, and execution primitives for Starweaver"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
starweaver-context.workspace = true
starweaver-core.workspace = true
starweaver-model.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]

[lints]
workspace = true
