[package]
name = "starweaver-usage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Usage accounting, limits, and optional pricing primitives for Starweaver"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[features]
default = []
pricing = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
