[package]
name = "starweaver-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Starweaver desktop shell and privileged supervisor"
publish = false

[lib]
name = "starweaver_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde.workspace = true
tauri = { version = "2.11.5", features = [] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.18.0"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.31.3", features = ["socket", "user"] }

[target.'cfg(target_os = "windows")'.dependencies]
interprocess = "2.4.2"
sysinfo = { version = "0.39.6", default-features = false, features = ["system"] }
uuid.workspace = true
widestring = "1.2.1"

[lints]
workspace = true
